...
                        }
                    }
                }
//                .navigationDestination(for: Movie.self) { movie in
//                        MovieDetails(movie: movie)
//                    }
                .navigationTitle("Movies")
        }
    }
}

struct SearchMovieView_Previews: PreviewProvider {
    static var previews: some View {
...
